--- a/proj2/misc/README
+++ b/proj2/misc/README
@@ -1,1 +1,6 @@
-Used https://www-numi.fnal.gov/offline_software/srt_public_context/WebDocs/Errors/unix_system_errors.html as a resource on error codes
+# Used these Resources:
+
+1. BIG O. “Know Thy Complexities!” Big, Sept. 2011, https://www.bigocheatsheet.com/.
+2. Linux Community. “ERRNO(3).” Errno(3) - Linux Manual Page, 19 Nov. 2019, http://man7.org/linux/man-pages/man3/errno.3.html.
+3. Ingson, Andrew P. “ADMARIl - Project 1.” GitHub, 1 Nov. 2019, https://github.com/ADMARIl.
+4. FNAL. Errors: Linux System Errors, 2019, https://www-numi.fnal.gov/offline_software/srt_public_context/WebDocs/Errors/unix_system_errors.html.
